# nbezier

./: Cargo.toml  README.md
benches/: common.rs  flamegraph.rs  protobuf.rs  samples.rs  speed.rs
benches/common/: bezier.rs  samples.rs
examples/: heaptrack.rs  svg.rs
playground/: index.html  run.sh  style.css
src/: bezier.rs  bounding_box.rs  graham_scan.rs  lib.rs  main.rs  nbezier.rs  npolynomial.rs  polynomial.rs  simple.rs  svg.rs  vector.rs
src/draw/: mod.rs  svg.rs
src/svg/: bezier.rs
wasm/: Cargo.toml
wasm/playground/: index.html  run.sh  style.css
wasm/src/: lib.rs
