[package]
name = "nbezier"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Bezier curve library based on nalgebra"
homepage = "https://github.com/gammelalf/nbezier"
repository = "https://github.com/gammelalf/nbezier"
readme = "README.md"
keywords = ["math", "bezier", "geometry"]
categories = ["mathematics"]

[profile.release]
debug = 1

[features]
default = []
draw = []
draw-svg = ["draw"]

[dependencies]
nalgebra = "0.31"

[dev-dependencies]
once_cell = "1.11"
pprof = { version = "0.9", features = ["flamegraph", "protobuf-codec", "criterion"] }
criterion = { version = "0.3", features = ["html_reports"] }
dhat = { version = "0.3" }

[[bench]]
name = "flamegraph"
harness = false

[[bench]]
name = "protobuf"
harness = false

[[bench]]
name = "speed"
harness = false
