[package]
name = "nbezier"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Bezier curve library based on nalgebra"
homepage = "https://github.com/gammelalf/nbezier"
repository = "https://github.com/gammelalf/nbezier"
readme = "README.md"
keywords = ["math", "bezier", "geometry"]
categories = ["mathematics"]
include = [
	"src/*",
	"Cargo.toml",
	"README.md",
	"LICENSE",
]

[features]
default = []
draw = []
draw-svg = ["draw"]

[dependencies]
nalgebra = "0.31"

